k8s-local/traefik/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: gateway
spec:
  hostnames:
    - traefik.localhost
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      filters:
        - type: URLRewrite
          urlRewrite:
            path: { type: ReplacePrefixMatch, replacePrefixMatch: /dashboard }
      backendRefs:
        - name: traefik
          port: 8080
    - matches:
        - path: { type: PathPrefix, value: /api }
      backendRefs:
        - name: traefik
          port: 8080
